# whisper-hotkeyd

./: .gitignore  CLAUDE.md  LICENSE  PKGBUILD  README.md  pyproject.toml
data/: whisper-hotkeyd.desktop  whisper-hotkeyd.service
scripts/: release.sh
whisper_hotkeyd/: __main__.py  cli.py  clipboard.py  config.py  engine.py  languages.py  listener.py  logsetup.py  recorder.py  setup_helpers.py  transcriber.py  tray.py
