[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-hotkeyd"
version = "5.3.0"
description = "Push-to-talk voice transcription to clipboard, with system tray"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sinoosoida" }]
keywords = ["voice", "transcription", "whisper", "clipboard", "tray", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "PySide6>=6.5",
    "evdev>=1.6",
    "pydub>=0.25",
    "numpy>=1.23",
    "requests>=2.28",
    "tomli>=2.0; python_version<'3.11'",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
whisper-hotkeyd = "whisper_hotkeyd.cli:main"

[project.urls]
Homepage = "https://github.com/sinoosoida/whisper-hotkeyd"
Issues = "https://github.com/sinoosoida/whisper-hotkeyd/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["whisper_hotkeyd*"]

[tool.setuptools.package-data]
whisper_hotkeyd = ["resources/*.svg"]
